--- a/package.json
+++ b/package.json
@@ -2,8 +2,12 @@
   "name": "messy_box",
   "private": true,
   "dependencies": {
+    "@rails/actioncable": "^6.0.0",
     "@rails/ujs": "^6.0.0",
-    "@rails/actioncable": "^6.0.0"
+    "@rails/webpacker": "4.3.0"
   },
-  "version": "0.1.0"
+  "version": "0.1.0",
+  "devDependencies": {
+    "webpack-dev-server": "^3.11.0"
+  }
 }
