--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -54,6 +54,7 @@ services:
 
   postgres:
     image: postgres:12
+    command: postgres -c log_statement=all
     volumes:
       - postgres:/var/lib/postgresql/data
       - ./log:/root/log:cached
