--- a/package.json
+++ b/package.json
@@ -2,9 +2,14 @@
   "name": "messy_box",
   "private": true,
   "dependencies": {
+    "@babel/preset-react": "^7.12.7",
     "@rails/actioncable": "^6.0.0",
     "@rails/ujs": "^6.0.0",
-    "@rails/webpacker": "4.3.0"
+    "@rails/webpacker": "4.3.0",
+    "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
+    "prop-types": "^15.7.2",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1"
   },
   "version": "0.1.0",
   "devDependencies": {
