--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "messy_box",
   "private": true,
   "dependencies": {
+    "@apollo/client": "^3.3.7",
     "@babel/preset-react": "^7.12.7",
     "@rails/actioncable": "^6.0.0",
     "@rails/ujs": "^6.0.0",
