--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
     "graphql": "^15.4.0",
     "graphql-tag": "^2.11.0",
+    "konva": "^7.2.2",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-apollo": "^3.1.5",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "react-konva": "^17.0.1-3"
   },
   "version": "0.1.0",
   "devDependencies": {
