--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react": "^17.0.1",
     "react-apollo": "^3.1.5",
     "react-dom": "^17.0.1",
-    "react-konva": "^17.0.1-3"
+    "react-konva": "^17.0.1-3",
+    "react-router-dom": "^5.2.0"
   },
   "version": "0.1.0",
   "devDependencies": {
