--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,7 +27,7 @@ x-backend: &backend
     - bundle:/usr/local/bundle
     - node_modules:/app/node_modules
     - packs:/app/public/packs
-  environment:
+  environment: &backend_env
     <<: *env
     DATABASE_URL: postgres://postgres:password@postgres:5432
     BOOTSNAP_CACHE_DIR: /usr/local/bundle/_bootsnap
@@ -115,6 +115,29 @@ services:
       - 127.0.0.1:9200:9200
     healthcheck:
       test: curl -s http://localhost:9200/_cluster/health | grep -vq '"status":"red"'
+
+  rails-test:
+    <<: *backend
+    ports:
+      - '4000:4000'
+    command: bundle exec rails test:system
+    environment:
+      <<: *backend_env
+      RAILS_ENV: test
+      SELENIUM_HUB_URL: http://selenium:4444/wd/hub
+      APP_HOST: rails-test
+    depends_on:
+      - postgres
+      - es
+      - selenium
+
+  selenium:
+    image: selenium/standalone-chrome-debug
+    volumes:
+      - /dev/shm:/dev/shm
+    ports:
+    - "4444:4444"
+    - "5900:5900"
 
 volumes:
   bundle:
