--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -116,7 +116,7 @@ services:
     healthcheck:
       test: curl -s http://localhost:9200/_cluster/health | grep -vq '"status":"red"'
 
-  rails-test:
+  system-test:
     <<: *backend
     ports:
       - '4000:4000'
@@ -125,7 +125,7 @@ services:
       <<: *backend_env
       RAILS_ENV: test
       SELENIUM_HUB_URL: http://selenium:4444/wd/hub
-      APP_HOST: rails-test
+      APP_HOST: system-test
     depends_on:
       - postgres
       - es
