--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -42,6 +42,7 @@ x-backend: &backend
     - postgres
     - es
     - redis
+    - minio
 
 services:
   runner:
@@ -146,6 +147,27 @@ services:
     <<: *backend
     command: bundle exec sidekiq -C config/sidekiq.yml
 
+  minio:
+    image: minio/minio
+    ports:
+      - "9000:9000"
+      - "9001:9001"
+    volumes:
+      - minio:/data
+    environment:
+      MINIO_ROOT_USER: minio_access
+      MINIO_ROOT_PASSWORD: minio_secret
+    command: ["server", "/data", "--console-address", ":9001"]
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:9000/minio/health/live"]
+      interval: 10s
+  mc:
+    image: minio/mc
+    volumes:
+      - mc:/root/.mc
+    depends_on:
+      - minio
+
 volumes:
   bundle:
   node_modules:
@@ -154,3 +176,5 @@ volumes:
   rails_cache:
   redis:
   es:
+  minio:
+  mc:
